fix legend location on mobile

--- a/styles.css
+++ b/styles.css
@@ -803,7 +803,7 @@ html {
   }
 
   .legend {
-    bottom: 20px;
+    bottom: 30px;
     left: 10px;
     right: 10px;
     max-width: none;
